align up button correct

--- a/app/assets/stylesheets/components/_posts.scss
+++ b/app/assets/stylesheets/components/_posts.scss
@@ -10,6 +10,10 @@
     min-width: 60px;
     .like-button {
       margin-top: 10px;
+      text-align: center;
+      a {
+        display: block;
+      }
       a:hover {
         text-decoration: none;
         font-weight: bold;
